# activerecpp

./: CMakeLists.txt  ProjectHome.md  activerecpp.kdevelop  activerecpp.kdevelop.filelist
example/: example.cpp
lib/: http.cpp  http.h  resource.cpp  resource.h  restful_locale.h  xmlparser.cpp  xmlparser.h
test/: test_resource.cpp
trunk/: README  activerecpp.kdevelop.filelist  restful.tar.bz2
trunk/cmake/modules/: FindBoost.cmake  FindCurl.cmake  FindXerces.cmake
trunk/example/: CMakeLists.txt
trunk/lib/: CMakeLists.txt  http.cpp  http.h  resource.cpp  resource.h
trunk/test/: CMakeLists.txt  test_resource.cpp
